# overleaf-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  overleaf_config.example.json  pyproject.toml
src/overleaf_mcp/: __init__.py  compile.py  config.py  credentials.py  git_client.py  latex.py  server.py
