[project]
name = "overleaf-mcp"
version = "0.1.0"
description = "The most comprehensive MCP server for Overleaf — full CRUD, compile, PDF download, git history, diff, and more."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "rangehow"}
]
keywords = ["mcp", "overleaf", "latex", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "gitpython>=3.1.40",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
compile = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
overleaf-mcp = "overleaf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overleaf_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
