[project]
name = "overleaf-mcp-plus"
version = "0.1.1"
description = "The most comprehensive MCP server for Overleaf — full CRUD, compile, PDF download, git history, diff, and more. (The `overleaf-mcp` name on PyPI is taken by a smaller read-only project, hence the `-plus` suffix; the CLI command is still `overleaf-mcp`.)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "rangehow"}
]
keywords = ["mcp", "overleaf", "latex", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "gitpython>=3.1.40",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
compile = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
overleaf-mcp = "overleaf_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overleaf_mcp"]

[tool.hatch.build.targets.sdist]
# Explicit allowlist so we never accidentally ship dev tooling, private
# skill notes, promo screenshots, or local caches.
include = [
    "src/overleaf_mcp/**/*.py",
    "README.md",
    "LICENSE",
    "pyproject.toml",
    "Dockerfile",
    "docker-compose.yml",
    "overleaf_config.example.json",
]
exclude = [
    ".chatui",
    ".chatui/**",
    "promo",
    "promo/**",
    "overleaf_cache",
    "overleaf_cache/**",
    "dist",
    "dist/**",
    "*.pyc",
    "__pycache__",
    "**/__pycache__",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
